Updated /links css to match updates to main and fix visual bug on mobile

--- a/links/main.css
+++ b/links/main.css
@@ -1,6 +1,6 @@
 @font-face {
 		font-family: proxima-nova;
-		src: url(https://use.typekit.net/af/705e94/00000000000000003b9b3062/27/l?subset_id=2&fvd=n4&v=3);
+		src: url(../proxima-nova);
 		font-display: swap;
 }
 
@@ -43,6 +43,7 @@ li a {
 	color: #fff;
 	font: 700 32px/1.5 proxima-nova;
 	text-decoration: none;
+	padding: 20px 10px;
 }
 
 @media (prefers-color-scheme:dark) {
